fixed parts of delivery workflow